# flakes-cmake-project-template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
src/: main.cpp
